# rf

./: README.md  pyproject.toml
rf/: \  calculate.py  cli.py  ressources.py  rfdata.py
rf/default/: PMA-545G2+_Unit3_4.75V_Minus45.s2p  PMA-545G2+_Unit3_4.75V_Plus25.s2p  PMA-545G2+_Unit3_4.75V_Plus85.s2p  PMA-545G2+_Unit3_5.25V_Minus45.s2p  PMA-545G2+_Unit3_5.25V_Plus25.s2p  PMA-545G2+_Unit3_5.25V_Plus85.s2p  PMA-545G2+_Unit3_5V_Minus45.s2p  PMA-545G2+_Unit3_5V_Plus25.s2p  PMA-545G2+_Unit3_5V_Plus85.s2p  new-filter.s2p
rf/visualize/: page1.py  page2.py  streamlit_app.py
